# gtaggenator

./: .eslintcache  .gitignore  README.md  build.sh  cli.sh  package-lock.json  package.json  start.sh
public/: index.html
public/ruffle/: ruffle.js  ruffle.js.map
src/: App.css  App.js  App.scss  App.tsx  Atoms.ts  Commands.ts  Content.tsx  Deltas.tsx  DisplayRecord.tsx  Filters.tsx  ResizablePanel.tsx  Utils.ts  interfaces.ts
src-tauri/: .gitignore  Cargo.toml  NOTES.md  taggenator_settings.json  tauri.conf.json  test.sh  valgrind.sh  watch.sh
src-tauri/src/: cmd.rs  main.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/tauri/: actions.rs  cmd.rs  file_server.rs  mod.rs
src-tauri/taggenator/: Cargo.toml
src-tauri/taggenator/src/: lib.rs  main.rs  taggenator.rs
src-tauri/taggenator/src/data/: tsettings.yaml
src-tauri/taggenator/src/taggenator/: database.rs  errors.rs  inout.rs  mod.rs  query_processor.rs  settings.rs  tag_recommender.rs  taggenator.rs
src-tauri/taggenator/src/taggenator/commands/: apply_tags.rs  delete.rs  dump.rs  dump_tags.rs  grab_bag.rs  import.rs  mod.rs  move_record.rs  open.rs  open_all.rs  run_grabbag.rs
src-tauri/taggenator/src/taggenator/database/: database.rs  mod.rs  searcher.rs  writer.rs
src-tauri/taggenator/src/taggenator/models/: cache.rs  grabbag.rs  mod.rs  record.rs  tags.rs
src-tauri/taggenator/src/taggenator/utils/: commands.rs  files.rs  flags.rs  input.rs  lists.rs  mod.rs
src-tauri/tests/: generateData.rb  grab_bag_test_2.rb  grab_bag_tests.sh  grabbagger.rb  open.sh  taggenator_settings.json  taggenator_settings.toml  tsettings.yaml
src/Components/: Content.tsx  Deltas.tsx  DisplayRecord.tsx  Drawer.tsx  Filters.tsx  Initializer.tsx  ResizablePanel.tsx  Searches.tsx  SimpleTooltip.tsx  SpecialInput.tsx  UpDown.tsx
src/Components/Content/: ComicContainer.tsx  FlashContainer.tsx  GrabBag.tsx  ImageContainer.tsx  VideoContainer.tsx
src/Utils/: Atoms.ts  Commands.ts  Hotkeys.ts  interfaces.ts
