[package]
authors = ["Michael Adams"]
build = "src/build.rs"
default-run = "gtaggenator"
description = "A Tauri App"
edition = "2018"
license = ""
name = "gtaggenator"
repository = ""
version = "0.1.0"
[[bin]]
name = "gtaggenator"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.taggenator]
path = "taggenator"

[dependencies.tauri]
features = ["all-api"]
version = "0.10"

[features]
embedded-server = ["tauri/embedded-server"]
no-server = ["tauri/no-server"]

[target]
[target."cfg(windows)"]
[target."cfg(windows)".build-dependencies]
winres = "0.1"

[workspace]
members = ["taggenator"]
