[package]
authors = [ "Michael Adams" ]
build = "src/build.rs"
default-run = "gtaggenator"
description = "A Tauri App"
edition = "2018"
license = ""
name = "gtaggenator"
repository = ""
version = "0.1.0"

[[bin]]
name = "gtaggenator"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
warp = "0.2"

  [dependencies.serde]
  features = [ "derive" ]
  version = "1.0"

  [dependencies.taggenator]
  path = "taggenator"

  [dependencies.tauri]
  features = [ "all-api" ]
  version = "0.10"

  [dependencies.tokio]
  version = "0.2"
  features = [ "full" ]

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[workspace]
members = [ "taggenator" ]
