[package]
authors = ["madams <mtadams42@gmail.com>"]
edition = "2018"
name = "taggenator"
version = "0.1.0"
[dependencies]
itertools = "*"
multimap = "*"
pathdiff = "*"
rand = "*"
serde_yaml = "*"
shell-words = "*"
string-builder = "*"
toml = "0.5.7"
walkdir = "2"

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.rusqlite]
features = ["chrono"]
version = "*"

[dependencies.rustbreak]
features = ["ron_enc"]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "1.0"
